--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,9 @@
 /* adding color*/
 main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     color: hsl(199, 48%, 27%);
   }
 
@@ -43,6 +47,7 @@ select {
 }
 button:hover {
     color: rgb(255, 255, 0);
+    display: block;
   }
   
 h1,h2,h3 {
@@ -56,6 +61,9 @@ a[href="media/waiting-music-116216.mp3"] {
     font-size: 14px;
 }
 nav > ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
     list-style: none;
 }
 .Content p ~ p {
@@ -65,8 +73,47 @@ h2 + button {
     margin-top: 20px;
 }
 select#content_selector {
-    width: 400px;
+    min-width: 400px;
 }
 #visitor_type {
-    width: 150px;
+    display: inline;
+    max-width: 150px;
+    position: static;
 }
+#comments {
+    height: 30px;
+    width: 200px;
+    position: relative;
+}
+section{
+    flex-wrap: wrap
+}
+
+@media screen and (max-width: 600px) {
+    footer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    
+    }
+}
+
+@font-face {
+    font-family: "Chivo";
+    src: url("ChivoMono-VariableFont_wght.ttf") format("woff2");
+  }
+  
+  p {
+    font-family: "Chivo", sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    color: #333;
+  }
+
+  * {
+    margin: 0.5rem;
+  }
+
+  select[name="content selector"] {
+    font-size: 18px;
+  }
